UserInterface - Components Changed

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -24,8 +24,8 @@ input{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -41,4 +41,10 @@ input{
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.primary{
+  background-color:#61d800;
+  color:darkblue;  
 }
